Convert guice/guice7 modules to junit5